CreateVPC-LaunchEC2/networks.tf
resource "aws_vpc" "foobar-example"{
	cidr_block = "10.0.0.0/16"
	enable_dns_hostnames = true
	enable_dns_support = true

	tags{
		Name = "terraform-foobarVPC"
	}
}
